css/style.css
/*#region Imported Settings  */

/* CSS Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'PT Sans', sans-serif;
    line-height: 2rem;
}

/* a-Link reset */
a {
    color: inherit;
    cursor: default;
    text-decoration: none;
}

/* Larghezza pari al contenitore */
.w-100 {
    width: 100%;
}

/* Altezza pari al contenitore */
.h-100 {
    height: 100%;
}

/** UTILITIES **/


/* Flexbox utilities */

.col {
    display: flex;
    flex-direction: column;
}

.row {
    display: flex;
    flex-direction: row;
}

.col-reverse {
    display: flex;
    flex-direction: column-reverse;
}

.row-reverse {
    display: flex;
    flex-direction: row-reverse;
}

/* Justify */

.space-between {
    justify-content: space-between;
}

.space-around {
    justify-content: space-around;
}

.space-evenly {
    justify-content: space-evenly;
}

.j-center {
    justify-content: center;
}

/* Align */

.ai-flex-start {
    align-items: flex-start;
}

.ai-center {
    align-items: center;
}

.ai-flex-end {
    align-items: flex-end;
}

/* Misc */

.grow {
    flex-grow: 1;
}

.no-shrink {
    flex-shrink: 0;
}

.wrap {
    flex-wrap: wrap;
}

.no-wrap {
    flex-wrap: nowrap;
}

/* /Flexbox */


/* Position tags utilities */

.relative {
    position: relative;
}

.absolute {
    position: absolute;
}

.fixed {
    position: fixed;
}

/* /Position tags */


/* Clearfix per uso del float, da applicare al container */
.clearfix::after {
    clear: both;
    content: "";
    display: table;
}

/* Float left */
.float-left {
    float: left;
}

/* Float right */
.float-right {
    float: right;
}

/*#endregion Imported Settings  */

/*#region Variables  */
:root {
    --main-bg-color: #0084fd;
    --even-section-bg-color: #9792e4;
}

/*#endregion Variables  */

/*#region Utilities  */

.container {
    padding: 0 20px;
}

.quoted-text,
.founder-quote {
    quotes: "“""”";
}

/*#endregion Utilities  */

/*#region Shared  */

.column {
    width: 100%;
}

button {
    border: none;
    border-radius: 20px;

    padding: 5px 10px;
}

img {
    width: 100%;
}

.card {
    border: none;
    border-radius: 20px;

    text-align: center;
    color: grey;
    background-color: white;

    padding: 20px;

    display: flex;
    flex-direction: column;
}

.card>*,
.card>div>*:not(#testimonials .card>div>*, .button-container>button) {
    padding-top: 20px;
}

.quoted-text::before,
.quoted-text::after,
#about-us .img-container::after {
    font-size: 70px;
    color: #fff;
    line-height: 0;
    vertical-align: bottom;
}

.quoted-text::before,
#about-us .img-container::after {
    content: open-quote;
}

.quoted-text::after {
    content: close-quote;
}

#strategic-planning,
#about-us {
    padding: 100px 0;
}

/*#endregion Shared  */

/*#region Content */

/*#region Header */
header {
    background-color: var(--main-bg-color);
    min-height: 80px;
    line-height: 80px;

    position: fixed;
}

.menu {
    color: white;
}

header .fa-bars,
header img {
    vertical-align: middle;
}

header .fa-bars {
    transform: scale(1.5);
}

.menu ul {
    display: none;
}

/*#endregion Header  */

/*#region Main  */

main {
    padding-top: 130px;
}

section:nth-of-type(even) {
    background-color: var(--even-section-bg-color);
}

/*#region Product Presentation  */

#product-presentation {
    margin-bottom: 50px;
}

#product-presentation .row {
    row-gap: 20px;
}

#product-presentation .card {
    background-color: #b5ddff;
    font-weight: bold;
}

#product-presentation h3 {
    color: var(--main-bg-color);

    font-size: xx-large;
}

#product-presentation button {
    background-color: var(--main-bg-color);
    color: white;
    font-weight: inherit;

    padding: 10px 50px;
}

#product-presentation .column:first-child>.card {
    text-align: left;
    padding-bottom: 0px;
}

#product-presentation .card>i {
    color: var(--main-bg-color);

    font-size: 5rem;
}

/*#endregion Product Presentation  */

/*#region Strategic Planning  */

.planning-caption {
    color: white;
    padding-bottom: 30px;
}

.planning-caption h2 {
    padding: 40px 0;
    font-size: xx-large;
}

#strategic-planning .card {
    color: black;
}

#strategic-planning .card>h3 {
    font-size: x-large;
}

#strategic-planning .card>p {
    font-style: oblique;
}

#strategic-planning i {
    background-color: var(--even-section-bg-color);
    padding: 20px;
    border: none;
    border-radius: 50%;
}

/*#endregion Strategic Planning  */

/*#region Testimonials  */

#testimonials {
    text-align: center;
    padding: 0 20px;
}

#testimonials .col {
    padding: 100px 0;
}

#testimonials .column {
    padding: 20px 0;
}

#testimonials h3 {
    font-weight: inherit;
    text-transform: uppercase;
}

#testimonials h2 {
    color: var(--even-section-bg-color);
    font-size: xx-large;
    line-height: 3rem;
    padding: 20px 0;
}

#testimonials .card {
    background-color: var(--even-section-bg-color);
    color: white;
}

#testimonials img {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    object-fit: cover;
}

#testimonials .signature {
    font-size: larger;
    font-weight: bold;
    text-transform: uppercase;
}

/*#endregion Testimonials  */

/*#region Benefits  */

#benefits {
    padding-bottom: 100px;
}

#benefits h2 {
    text-align: center;
    color: white;
    font-size: 2.5rem;
    padding: 70px 0;
}

#benefits .col {
    row-gap: 50px;
}

#benefits .card {
    text-align: left;
}

#benefits .card-number {
    font-size: 3rem;
    color: var(--even-section-bg-color);
    font-weight: bold;
    padding: 20px 0;
}

#benefits h3 {
    color: var(--even-section-bg-color);
    font-size: 2rem;
    padding: 20px 0;
}

#benefits button {
    background-color: var(--even-section-bg-color);
    color: white;
    font-weight: bold;
    font-size: 1.2rem;
    padding: 10px 50px;
}

/*#endregion Benefits  */

/*#region About Us  */

#about-us .summary>*,
#about-us .founder-quote>* {
    padding: 30px 0;
}

#about-us h2 {
    padding-top: 0;
    font-size: 3rem;
    color: var(--even-section-bg-color);
}

#about-us img {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    object-fit: cover;
}

#about-us .img-container {
    position: relative;
}

#about-us .img-container::after {
    color: var(--even-section-bg-color);
    font-size: 15rem;
    position: absolute;
    bottom: 100px;
    left: 140px;
}

#about-us .caption {
    color: var(--even-section-bg-color);
    font-weight: bold;
    font-size: 2.2rem;
    line-height: 2.5rem;
}

#about-us i {
    padding-right: 5px;
}

#about-us button {
    color: white;
    background-color: var(--even-section-bg-color);
}

/*#endregion About Us  */

/*#endregion Main  */

footer {
    background-color: #333333;
}


/*#endregion Content */

/*#region Mediaquery  */


/* Tablet */
@media screen and (min-width: 768px) {

    /*#region Product presentation  */
    #product-presentation .column:first-child {
        width: calc(100% / 3 *2);
    }

    #product-presentation img {
        width: 50%;
    }

    #product-presentation .column {
        width: calc(100% / 3);
        padding: 0 10px;
    }

    #product-presentation .card {
        height: 100%;
    }

    /*#endregion Product presentation  */

    /*#region Strategic planning  */
    #strategic-planning .card {
        padding: 50px;
    }

    #strategic-planning h2 {
        font-size: 72px;
        padding: 70px 0;
    }


    /*#endregion Strategic planning  */

    /*#region Testimonials  */
    #testimonials .card {
        flex-direction: row;
        text-align: left;
    }

    #testimonials h2 {
        font-size: 3rem;
    }

    #testimonials .feedback {
        padding-left: 20px;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    #testimonials .feedback>* {
        padding: 10px 0;
    }

    /*#endregion Testimonials  */

    /*#region Benefits  */
    #benefits .card {
        width: calc(100% / 2 - 20px);
    }

    #benefits .col {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    /*#endregion Benefits  */

    /*#region About Us  */
    #about-us .col {
        flex-direction: row;
        justify-content: space-around;
    }

    #about-us .summary {
        width: 60%;
    }

    #about-us .founder-quote {
        width: 30%;
    }

    #about-us .founder-quote>* {
        padding: 10px 0;
    }

    #about-us .caption {
        font-size: 1.7rem;
    }

    /*#endregion About Us  */

}


/* Desktop */
@media screen and (min-width: 1200px) {

    .container {
        width: 1200px;
        margin: 0 auto;
    }

    /*#region Header  */
    .menu i {
        display: none;
    }

    .menu {
        flex-basis: 40%;

    }

    .menu ul {
        display: flex;

        list-style-type: none;
    }

    /*#endregion Header  */

    /*#region Product presentation  */
    #product-presentation .column:first-child>.card {
        flex-direction: row;
        padding-right: 50px;
    }

    #product-presentation img {
        width: 40%;
    }

    /*#endregion Product presentation  */

    /*#region Strategic planning  */

    #strategic-planning>.container {
        display: flex;
        justify-content: space-evenly;
        padding: 0 100px;
    }

    #strategic-planning h2 {
        font-size: xx-large;
    }

    #strategic-planning .column {
        width: calc(100% / 2 - 100px);
    }

    #strategic-planning .column:nth-child(2) {
        display: flex;
        align-items: flex-end;
    }

    #strategic-planning .card {
        height: auto;
        padding: 50px 20px;
    }

    #strategic-planning .card>img {
        width: 50%;
        align-self: center;
    }

    /*#endregion Strategic planning  */

    /*#region Benefits  */
    #benefits .card {
        width: calc(100% / 3 - 20px);
    }

    /*#endregion Benefits  */

}


/*#endregion Mediaquery  */

/*#region DEBUGGER */

.debug section {
    min-height: 500px;
}

.debug .column {
    min-height: 350px;
    border: 1px dashed red;
}


.debug .card {
    height: 100%;
}


.debug footer {
    min-height: 160px;
}

/*#endregion DEBUGGER  */

